Opened 5 years ago
Closed 5 years ago
#12855 closed bug (fixed)
i965 modesetting regression
Reported by: | kallisti5 | Owned by: | kallisti5 |
---|---|---|---|
Priority: | high | Milestone: | Unscheduled |
Component: | Drivers/Graphics/intel_extreme | Version: | R1/Development |
Keywords: | Cc: | ||
Blocked By: | Blocking: | ||
Platform: | All |
Note:
See TracTickets
for help on using tickets.
Resolved via hrev50413. It appears that while Intel says only < generation 4 needs LVDS on PIPE B, my generation 5 laptop (0x2a02) regresses.