intel_extreme: Fix regression from hrev50410; #12855